[package]
name = "ngrok2"
version = "0.1.0"
authors = ["Charbel Jacquin <charbel.jacquin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "*"
dotenv = "0.15.0"
error-chain = "0.12.4"
log = "*"
env_logger = "*"
url = "*"
serde =  { version = "*", features = ["derive"] }
serde_json = "*"
lazy_static = "*"
unzip = "*"